# 27th-DE-WinterProject

./: .gitignore  README.md  main.py  pyproject.toml
analysis/: eda.py  pre_eda.ipynb
analysis/outputs/preprocessed/: monthly_counts.csv  monthly_stats.csv  schema_baseline.csv  schema_column_summary.csv  yearly_totals.csv
analysis/outputs/raw/: monthly_counts.csv  monthly_stats.csv  schema_baseline.csv  schema_column_summary.csv  schema_mismatches.csv  yearly_totals.csv
data/taxi_zones/: taxi_zone_median_coords.csv
generator/: CMakeLists.txt  conanfile.txt  config.txt  generate.cpp  readme.md
infra/kafka/: docker-compose.yml
ingestor/: README.md  build.gradle  readme.md  settings.gradle  test_ingestion.java
ingestor/src/main/java/com/ingestion/: IngestionApplication.java
ingestor/src/main/java/com/ingestion/config/: ReactorKafkaConfig.java
ingestor/src/main/java/com/ingestion/controller/: IngestionController.java
ingestor/src/main/java/com/ingestion/dto/: TaxiEvent.java
ingestor/src/main/java/com/ingestion/service/: IngestionService.java
ingestor/src/main/resources/: application.yml
preprocess/: preprocess_add_trip_id.py  preprocess_taxi_data.py  preprocess_taxi_zone.py
