[project]
name = "27th-de-winterproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "pyshp>=3.0.3",
    "tqdm>=4.67.1",
]
